hyderabad dashboard 17th June v2

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react": "^16.13.1",
     "react-content-loader": "^5.0.4",
     "react-date-picker": "^8.0.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.0.0",
     "react-i18next": "^11.5.0",
     "react-is-visible": "^1.1.0",
+    "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
